# CS5220Final_Project

./: .gitignore  output.txt  test.txt
gpu/: CMakeLists.txt  canopy_air_space.cu  canopy_air_space.h  cohort_serial.cpp  cohort_serial.cu  numerics.cu  numerics.h  photosynthesis.cpp  photosynthesis.cu  photosynthesis.h  preliminary performance.xlsx  radiation_solver.cpp  radiation_solver.cu  radiation_solver.h
openmp/: CMakeLists.txt  canopy_air_space.cpp  cohort_serial.cpp  photosynthesis.cpp  radiation_solver.h
serial/: CMakeLists.txt  canopy_air_space.h  cohort_serial.cpp  numerics.cpp  numerics.h  parameters.h  photosynthesis.cpp  photosynthesis.h  radiation_solver.cpp  radiation_solver.h
